test Update i18n_en.json

--- a/assets/i18n/i18n_en.json
+++ b/assets/i18n/i18n_en.json
@@ -5,7 +5,7 @@
     "portfolio":"portfolio",
     "contact":"contact",
     "home__title":"Hi, I'm Shibang DU",
-    "home__subtitle":"Frontend developer",
+    "home__subtitle":"developer",
     "home__description":"High level experience in web design and development knowledge,producing quality work.",
     "home__contact":"Contact Me",
     "home__scroll-name":"Scroll down",
