--- a/assets/i18n/i18n_cn.json
+++ b/assets/i18n/i18n_cn.json
@@ -48,10 +48,10 @@
     "contact__title":"联系方式",
     "contact__subtitle":"与我联系",
     "tel":"电话",
-    "tel__number":"166********",
+    "tel__number":"13502733558",
     "email":"电子邮箱",
-    "email__address":"asoutherncat@gmail.com",
+    "email__address":"astro.car.dsb@gmail.com",
     "location":"位置",
-    "location__detail":"湖南省"
+    "location__detail":"广东省"
     
 }
