--- a/assets/i18n/i18n_cn.json
+++ b/assets/i18n/i18n_cn.json
@@ -5,7 +5,7 @@
     "portfolio":"项目集",
     "contact":"联系方式",
     "home__title":"Hi, I'm ASOUTHERNCAT",
-    "home__subtitle":"前端工程师",
+    "home__subtitle":"天文基础教育工作者",
     "home__description":"热爱学习，热爱生活，创造更高质量工作成果。",
     "home__contact":"与我联系",
     "home__scroll-name":"往下滑",
@@ -18,7 +18,7 @@
     "download":"查看简历",
     "skills__title":"技能",
     "skills__subtitle":"技术水平",
-    "skills__years":"*年工作经验",
+    "skills__years":"0年工作经验",
 
     "skills__title2":"后端开发",
     "skills__years2":"*年工作经验",
@@ -27,8 +27,8 @@
     "qualification__subtitle":"个人履历",
     "education":"教育",
     "work":"工作",
-    "qualification1__title":"计算机科学与技术",
-    "qualification1__subtitle":"**大学",
+    "qualification1__title":"物理学",
+    "qualification1__subtitle":"深圳大学高等研究院",
     "qualification2__title":"网页设计",
     "qualification2__subtitle":"自学",
     "qualification3__title":"网站开发",
