--- a/assets/i18n/i18n_cn.json
+++ b/assets/i18n/i18n_cn.json
@@ -4,7 +4,7 @@
     "skills":"技能",
     "portfolio":"项目集",
     "contact":"联系方式",
-    "home__title":"Hi, I'm ASOUTHERNCAT",
+    "home__title":"我是杜士邦",
     "home__subtitle":"天文基础教育工作者",
     "home__description":"热爱学习，热爱生活，创造更高质量工作成果。",
     "home__contact":"与我联系",
