--- a/assets/i18n/i18n_cn.json
+++ b/assets/i18n/i18n_cn.json
@@ -2,10 +2,10 @@
     "home":"主页",
     "about":"关于",
     "skills":"技能",
-    "portfolio":"项目集",
+    "portfolio":"课题成果",
     "contact":"联系方式",
     "home__title":"我是杜士邦",
-    "home__subtitle":"天文基础教育工作者",
+    "home__subtitle":"天文（行星科学）科研工作者，天文基础教育工作者",
     "home__description":"热爱学习，热爱生活，创造更高质量工作成果。",
     "home__contact":"与我联系",
     "home__scroll-name":"往下滑",
@@ -18,7 +18,7 @@
     "download":"查看简历",
     "skills__title":"技能",
     "skills__subtitle":"技术水平",
-    "skills__years":"0年工作经验",
+    "skills__years":"4年工作经验",
 
     "skills__title2":"后端开发",
     "skills__years2":"*年工作经验",
