--- a/assets/i18n/i18n_en.json
+++ b/assets/i18n/i18n_en.json
@@ -26,10 +26,10 @@
     "qualification__subtitle":"My personal journey",
     "education":"Education",
     "work":"Work",
-    "qualification1__title":"Computer Enginner",
-    "qualification1__subtitle":"**** - University",
+    "qualification1__title":"Physic",
+    "qualification1__subtitle":"Institute for Advanced Study, Shenzhen University",
     "qualification2__title":"Web Design",
-    "qualification2__subtitle":"Self-Study",
+    "qualification2__subtitle":"Jinshan Middle School, Shantou",
     "qualification3__title":"Web Development",
     "qualification3__subtitle":"Self-Study",
 
