--- a/assets/i18n/i18n_en.json
+++ b/assets/i18n/i18n_en.json
@@ -4,8 +4,8 @@
     "skills":"skills",
     "portfolio":"portfolio",
     "contact":"contact",
-    "home__title":"Hi, I'm Shibang DU",
-    "home__subtitle":"ss",
+    "home__title":"Hi, I'm Shibang Du",
+    "home__subtitle":"A researcher on astronomy (planetary science),a worker on astronomical education.",
     "home__description":"High level experience in web design and development knowledge,producing quality work.",
     "home__contact":"Contact Me",
     "home__scroll-name":"Scroll down",
