--- a/assets/i18n/i18n_cn.json
+++ b/assets/i18n/i18n_cn.json
@@ -5,7 +5,7 @@
     "portfolio":"课题成果",
     "contact":"联系方式",
     "home__title":"我是杜士邦",
-    "home__subtitle":"一名天文（行星科学）科研工作者，天文基础教育工作者,中学天文奥赛教练",
+    "home__subtitle":"一名天文科研工作者，天文基础教育工作者,天文奥赛教练",
     "home__description":"热爱学习，热爱生活，创造更高质量工作成果。",
     "home__contact":"与我联系",
     "home__scroll-name":"往下滑",
