--- a/assets/i18n/i18n_en.json
+++ b/assets/i18n/i18n_en.json
@@ -33,8 +33,12 @@
     "qualification3__title":"Web Development",
     "qualification3__subtitle":"Self-Study",
 
-    "qualification4__title":"Software Enginner",
-    "qualification4__subtitle":"ShenZhen",
+    "qualification4__title":"Astronomical Olympic coach (High school group)",
+    "qualification4__subtitle":"CUHK-Shenzhen Daoyuan School",
+    "qualification5__title":"Astronomical Olympic coach (High school group)",
+    "qualification5__subtitle":"Haiwan Middle School",
+    "qualification6__title":"Astronomical Olympic coach (High school group)",
+    "qualification6__subtitle":"Jinshan Middle School",
 
     "portfolio__title":"Portfolio",
     "portfolio__subtitle":"Most recent works",
