--- a/assets/i18n/i18n_en.json
+++ b/assets/i18n/i18n_en.json
@@ -33,7 +33,7 @@
     "qualification3__title":"Web Development",
     "qualification3__subtitle":"Self-Study",
 
-    "qualification4__title":"Astronomical Olympic coach (High school group)",
+    "qualification4__title":"Astronomical Olympic coach (Grade 7-9 group)",
     "qualification4__subtitle":"CUHK-Shenzhen Daoyuan School",
     "qualification5__title":"Astronomical Olympic coach (High school group)",
     "qualification5__subtitle":"Haiwan Middle School",
