--- a/assets/i18n/i18n_en.json
+++ b/assets/i18n/i18n_en.json
@@ -51,9 +51,9 @@
     "contact__title":"Contact me",
     "contact__subtitle":"Get in touch",
     "tel":"Call me",
-    "tel__number":"166********",
+    "tel__number":"13502733558",
     "email":"E-mail",
-    "email__address":"asoutherncat@gmail.com",
+    "email__address":"astro.cat.dsb@gmail.com",
     "location":"Location",
-    "location__detail":"HuNan , CHN"
+    "location__detail":"Guangdong, CHN"
 }
