--- a/assets/i18n/i18n_en.json
+++ b/assets/i18n/i18n_en.json
@@ -26,12 +26,12 @@
     "qualification__subtitle":"My personal journey",
     "education":"Education",
     "work":"Work",
-    "qualification1__title":"Physics",
-    "qualification1__subtitle":"Institute for Advanced Study, Shenzhen University",
-    "qualification2__title":"Physics, chemistry and geography",
-    "qualification2__subtitle":"Jinshan Middle School, Shantou",
-    "qualification3__title":"Web Development",
-    "qualification3__subtitle":"Self-Study",
+    "qualification1__title":"emm",
+    "qualification1__subtitle":"i don't know",
+    "qualification2__title":"Physics",
+    "qualification2__subtitle":"Institute for Advanced Study, Shenzhen University",
+    "qualification3__title":"Astronomical Olympiad (CHN team)",
+    "qualification3__subtitle":"Jinshan Middle School, Shantou",
 
     "qualification4__title":"Astronomical Olympic coach (Grade 7-9 group)",
     "qualification4__subtitle":"CUHK-Shenzhen Daoyuan School",
