--- a/assets/i18n/i18n_cn.json
+++ b/assets/i18n/i18n_cn.json
@@ -27,15 +27,20 @@
     "qualification__subtitle":"个人履历",
     "education":"教育",
     "work":"工作",
-    "qualification1__title":"物理学",
-    "qualification1__subtitle":"深圳大学高等研究院",
-    "qualification2__title":"网页设计",
-    "qualification2__subtitle":"自学",
-    "qualification3__title":"网站开发",
-    "qualification3__subtitle":"自学",
-    "qualification4__title":"软件工程师",
-    "qualification4__subtitle":"深圳",
-
+    "qualification1__title":"嗯",
+    "qualification1__subtitle":"我不知道",
+    "qualification2__title":"物理学",
+    "qualification2__subtitle":"深圳大学高等研究院",
+    "qualification3__title":"天文奥赛中国国家队",
+    "qualification3__subtitle":"汕头市金山中学",
+    
+    "qualification4__title":"天文奥赛教练（低年级组）",
+    "qualification4__subtitle":"香港中文大学（深圳）附属道远学校",
+    "qualification5__title":"天文奥赛教练（高年级组）",
+    "qualification5__subtitle":"汕头市海湾学校",
+    "qualification4__title":"天文奥赛教练（高年级组）",
+    "qualification4__subtitle":"汕头市金山中学",
+    
     "portfolio__title":"项目集",
     "portfolio__subtitle":"近期项目",
     "portfolio1__title":"网站1",
